--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Login</a></li>
+        <% if current_user %>
+          <li><%= link_to "Edit",  edit_user_registration_path %></li>
+          <li><%= link_to  "Destroy", destroy_user_session_path, method: :delete  %></li>
+        <% else %>
+          <li><%= link_to "Login", new_user_session_path %><li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
