--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
 
     <%= render 'layouts/header' %>
 
+    <% flash.each do |type, message| %>
+      <div class="alert alert-info fade-in">
+        <button class="close" data-dismiss="alert">x</button>
+        <%= message %>
+      </div>
+    <% end %>
+
   	<div class="container">
   		<%= yield %>
   	</div>
