--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
+          <li><%= link_to "New post", new_post_path %></li>
           <li><%= link_to "Dashboard", dashboard_path %></li>
           <li><%= link_to "Edit",  edit_user_registration_path %></li>
           <li><%= link_to  "Signout", destroy_user_session_path, method: :delete  %></li>
