Added further time validation

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -33,13 +33,13 @@
 	
 	<!-- scheduled posts -->
 	<div class="col-md-5">
-		<h3 class="text-center">Scheduled</h3>
+		<h3 class="text-center">Scheduled Posts</h3>
 		<hr>
 	</div>
 	
 	<!-- post history	 -->
 	<div class="col-md-5">
-		<h3 class="text-center">History</h3>
+		<h3 class="text-center">Post History</h3>
 		<hr>
 	</div>
 </div>
