--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -35,11 +35,13 @@
 	<div class="col-md-5">
 		<h3 class="text-center">Scheduled Posts</h3>
 		<hr>
+		<%= render @scheduled %>
 	</div>
 	
 	<!-- post history	 -->
 	<div class="col-md-5">
 		<h3 class="text-center">Post History</h3>
 		<hr>
+		<%= render @history %>
 	</div>
 </div>
